# TuxMix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.claude/skills/run-gui-headless/: SKILL.md
aur/tinyface/: PKGBUILD
aur/tinyface-git/: PKGBUILD
aur/tuxmix/: PKGBUILD
tinyface-core/: Cargo.toml
tinyface-core/examples/: alsa-scan.rs
tinyface-core/src/: babyface.rs  channel.rs  device.rs  error.rs  lib.rs  mixer.rs  mock.rs  scene.rs
tinyface-gui/: Cargo.toml
tinyface-gui/src/: app.rs  main.rs  matrix.rs  scenes.rs  theme.rs
tinyface-gui/src/widgets/: fader.rs  strip.rs
tinyface-tui/: Cargo.toml
tinyface-tui/src/: main.rs
tuxmix-core/: Cargo.toml
tuxmix-core/examples/: alsa-scan.rs
tuxmix-core/src/: babyface.rs  channel.rs  error.rs  lib.rs  mixer.rs  mock.rs  profile.rs  scene.rs
tuxmix-core/src/profiles/: babyface_pro.rs  mod.rs
tuxmix-gui/: Cargo.toml
tuxmix-gui/assets/: tuxmix.desktop
tuxmix-gui/src/: app.rs  main.rs  matrix.rs  osc.rs  scenes.rs  theme.rs
tuxmix-gui/src/widgets/: fader.rs  mod.rs  strip.rs
tuxmix-tui/: Cargo.toml
tuxmix-tui/src/: main.rs
