[package]
name = "tinyface-core"
version = "0.1.0"
edition = "2021"
description = "Core library for controlling RME audio interfaces on Linux via ALSA"

[dependencies]
alsa = "0.9"
log = "0.4"
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
