[package]
name = "tinyface-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for Tinyface — direct control of RME hardware DSP mixers on Linux"

[dependencies]
tinyface-core = { path = "../tinyface-core" }
iced = { version = "0.14", features = ["canvas", "tokio"] }
log = "0.4"
env_logger = "0.11"
