[package]
name = "tuxmix-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for TuxMix — direct control of RME hardware DSP mixers on Linux"

[dependencies]
tuxmix-core = { path = "../tuxmix-core" }
iced = { version = "0.14", features = ["canvas", "tokio", "advanced"] }
log = "0.4"
env_logger = "0.11"
